--- a/Expressway Admin loin/Properties/Resources.resx
+++ b/Expressway Admin loin/Properties/Resources.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="fotor-2024040612533 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fotor-2024040612533 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="high quality (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high quality (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -135,5 +132,11 @@
   </data>
   <data name="vehicle (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vehicle (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fotor-2024040612533 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fotor-2024040612533 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fotor-2024040612533" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fotor-2024040612533.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
