--- a/Expressway Admin loin/Properties/Resources.resx
+++ b/Expressway Admin loin/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="high quality (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\high quality (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fotor-2024040612533" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fotor-2024040612533.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="WhatsApp Image 2024-04-08 at 00.59.25_2162efe0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WhatsApp Image 2024-04-08 at 00.59.25_2162efe0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,7 +139,10 @@
   <data name="fotor-2024040612533 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fotor-2024040612533 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fotor-2024040612533" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fotor-2024040612533.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Welcome To The 32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Welcome To The 32.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Untitled design blue 4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Untitled design blue 4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
